# slack-airtable-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  airtable.py  karma.py  main.py  makefile  pyproject.toml
description_parser/: __init__.py  _llava_descriptor.py  _ocr_descriptor.py
